--- a/index-1.html
+++ b/index-1.html
@@ -19,8 +19,8 @@
             <button class="button-open">roll up</button>
         </div>
         <div class="main-button">
-            <a href="page-2.html"><button class="button"><span class="button-text">Adult version</span></button></a>
-            <a href="page-2.html"><button class="button2"><span class="button-text">Children version</span></button></a>
+            <a href="index-2.html"><button class="button"><span class="button-text">Adult version</span></button></a>
+            <a href="index-2.html"><button class="button2"><span class="button-text">Children version</span></button></a>
         </div>
     </div>
 </body>
