--- a/index-2.html
+++ b/index-2.html
@@ -13,7 +13,7 @@
             <span class="main-text">Follow me to Kostakis' room. And when you get there, click the “I’m here” button</span>
         </div>
         <img class="main-pic" src="images/dog 3.png" alt="">
-        <a href="page-3.html"><button class="button"><span class="button-text">I'm here</span></button></a>
+        <a href="index-3.html"><button class="button"><span class="button-text">I'm here</span></button></a>
     </div>
 </body>
 </html>
