--- a/index-3.html
+++ b/index-3.html
@@ -14,10 +14,10 @@
         </div>
             <img class="dog-pic" src="images/dog-begind.png" alt="">
             <img class="main-pic" src="images/image1.png" alt="">
-            <a href="ar.html"><button class="button"><span class="button-text">Play</span></button></a>
+            <a><button class="button"><span class="button-text">Play</span></button></a>
         <div class="intermediary-buttons">
-                <a href="page-2.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-                <a href="page-4.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
+                <a href="index-2.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
+                <a href="index-4.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
         </div>
     </div>
 </body>
