--- a/index-5.html
+++ b/index-5.html
@@ -14,10 +14,10 @@
         </div>
         <img class="dog-pic" src="images/dog-begind.png" alt="">
         <img class="main-pic" src="images/image 4.png" alt="">
-        <a href="page-6.html"><button class="button"><span class="button-text">Start</span></button></a>
+        <a href="index-6.html"><button class="button"><span class="button-text">Start</span></button></a>
         <div class="intermediary-buttons">
-            <a href="page-4.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-            <a href="page-7.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
+            <a href="index-4.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
+            <a href="index-7.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
     </div>
     </div>
 </body>
