--- a/index-7.html
+++ b/index-7.html
@@ -13,10 +13,10 @@
             <span class="main-text text">Stand in front of the sofa and press play</span>
         </div>
         <img class="main-pic pic" src="images/Frame 2.png" alt="">
-        <a href="ar2.html"><button class="button"><span class="button-text">PLAY</span></button></a>
+        <a><button class="button"><span class="button-text">PLAY</span></button></a>
         <div class="intermediary-buttons">
-            <a href="page-5.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-            <a href="page-8.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
+            <a href="index-5.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
+            <a href="index-8.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
     </div>
     </div>
 </body>
