--- a/index-8.html
+++ b/index-8.html
@@ -12,8 +12,8 @@
         <img class="main-pic pic-bottom" src="images/Frame 1.png" alt="">
     </div>
     <div class="intermediary-buttons">
-        <a href="page-7.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-        <a href="page-9.html"><button class="button-intermediary"><span class="button-text">MENU</span></button></a>
+        <a href="index-7.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
+        <a href="index-9.html"><button class="button-intermediary"><span class="button-text">MENU</span></button></a>
 </div>
 </body>
 </html>
