--- a/index-9.html
+++ b/index-9.html
@@ -16,11 +16,11 @@
             <span class="main-text ">We have 12 secrets in the museum, look for them. And here is the list:</span>
         </div>
         <div class="kostakis-start">
-            <a href="page-2.html"><button class="big-button"><span class="big-button-text">Kostaki's room</span></button></a>
+            <a href="index-2.html"><button class="big-button"><span class="big-button-text">Kostaki's room</span></button></a>
         </div>
 
         <div class="menu-cards">
-            <a href="page-10.html"><div class="menu__card">
+            <a href="index-10.html"><div class="menu__card">
                 <span class="card-title">Man and cloud</span>
                 <span class="card-subtitle">Solomon Nikritin</span>
                 <img class="card-img" src="images/Frame 22.png" alt="">
