--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="main-header">
+        <div class="main-title-content">
             <p class="title">MAIT</p>
             <span class="subtitle">Museum Kostaki</span>
         </div>
-        <img class="main-video" src="images/main-video.png" alt="">
-        <div class="main-content">
-            <span>Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. </span><br>
-            <button class="button-open">roll up</button>
+        <img class="main-pic" src="images/main-video.png" alt="">
+        <div class="drop-down__text">
+            <span class="drop-down-content">Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni</span><br>
+            <button id="button" class="drop-down__button" onclick='document.getElementById("button").innerHTML = "roll up"'><span class="drop-down__button-text">continue..</span></button>
         </div>
-        <div class="main-button">
-            <a href="index-2.html"><button class="button"><span class="button-text">Adult version</span></button></a>
-            <a href="index-2.html"><button class="button2"><span class="button-text">Children version</span></button></a>
+        <div class="version-button">
+            <a href="index-2.html"><button class="first-version__button"><span class="first-button__text">Adult version</span></button></a><br>
+            <a href="index-2.html"><button class="second-version__button"><span class="second-button__text">Children version</span></button></a>
         </div>
     </div>
 </body>
