--- a/index-2.html
+++ b/index-2.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="main-title">
-            <span class="main-text">Follow me to Kostakis' room. And when you get there, click the “I’m here” button</span>
+            <span class="main-title__text">Follow me to Kostakis' room.<br>And when you get there, click<br>the “I’m here” button</span>
         </div>
-        <img class="main-pic" src="images/dog 3.png" alt="">
-        <a href="index-3.html"><button class="button"><span class="button-text">I'm here</span></button></a>
+        <img class="dog-pic" src="images/dog 3.png" alt="">
+        <a href="index-3.html"><button class="small-button"><span class="small-button__text">I'm here</span></button></a>
     </div>
 </body>
 </html>
