--- a/index-3.html
+++ b/index-3.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="main-title">
-            <span class="main-text text">Stand in front of the photo and press PLAY</span>
+        <div class="small-main-title">
+            <span class="small-main-title__text">Stand in front of the photo and press PLAY</span>
         </div>
-            <img class="dog-pic" src="images/dog-begind.png" alt="">
-            <img class="main-pic" src="images/image1.png" alt="">
-            <a><button class="button"><span class="button-text">Play</span></button></a>
-        <div class="intermediary-buttons">
-                <a href="index-2.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-                <a href="index-4.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
+        <img class="dog-behind" src="images/dog-begind.png" alt="">
+        <img class="bottom-pic" src="images/image1.png" alt="">
+        <a href=""><button class="small-button"><span class="small-button__text">Play</span></button></a>
+        <div class="intermediary-button">
+            <a href="index-2.html"><button class="back-button"><span>BACK</span></button></a>
+            <a href="index-4.html"><button class="next-button"><span>NEXT</span></button></a>
         </div>
     </div>
 </body>
