--- a/index-4.html
+++ b/index-4.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <img class="main-pic pic" src="images/Frame 1.png" alt="">
-        <span class="intermediary-text">Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum. My great-grandmother lived in this building back when it was a Lazarite monastery called “Moni Good afternoon My name is Lara, I am the caretaker of this museum.</span>
-        <div class="intermediary-buttons">
-            <a href="index-3.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-            <a href="index-5.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
-    </div>
+        <img src="images/Frame 1.png" alt="">
+        <span class="scroll-text">Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>Good afternoon My name is Lara, I am the<br>caretaker of this museum. My great-<br>grandmother lived in this building back when<br>it was a Lazarite monastery called “Moni<br>.</span>
+        <div class="intermediary-button">
+            <a href="index-3.html"><button class="back-button"><span>BACK</span></button></a>
+            <a href="index-5.html"><button class="next-button"><span>NEXT</span></button></a>
+        </div>
     </div>
 </body>
 </html>
