--- a/index-5.html
+++ b/index-5.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="main-title">
-            <span class="main-text text">Stand in front of the poster and press start</span>
+        <div class="small-main-title">
+            <span class="small-main-title__text">Stand in front of the photo and press Start</span>
         </div>
-        <img class="dog-pic" src="images/dog-begind.png" alt="">
-        <img class="main-pic" src="images/image 4.png" alt="">
-        <a href="index-6.html"><button class="button"><span class="button-text">Start</span></button></a>
-        <div class="intermediary-buttons">
-            <a href="index-4.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-            <a href="index-7.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
-    </div>
+        <img class="dog-behind" src="images/dog-begind.png" alt="">
+        <img class="bottom-pic" src="images/image 4.png" alt="">
+        <a href="index-6.html"><button class="small-button"><span class="small-button__text">Start</span></button></a>
+        <div class="intermediary-button">
+            <a href="index-4.html"><button class="back-button"><span>BACK</span></button></a>
+            <a href="index-7.html"><button class="next-button"><span>NEXT</span></button></a>
+        </div>
     </div>
 </body>
 </html>
