--- a/index-7.html
+++ b/index-7.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="main-title">
-            <span class="main-text text">Stand in front of the sofa and press play</span>
+        <div class="small-main-title">
+            <span class="small-main-title__text">Stand in front of the sofa and press play</span>
         </div>
-        <img class="main-pic pic" src="images/Frame 2.png" alt="">
-        <a><button class="button"><span class="button-text">PLAY</span></button></a>
-        <div class="intermediary-buttons">
-            <a href="index-5.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-            <a href="index-8.html"><button class="button-intermediary"><span class="button-text">NEXT</span></button></a>
-    </div>
+        <img class="bottom-pic-big" src="images/Frame 2.png" alt="">
+        <a href=""><button class="small-button"><span class="small-button__text">Play</span></button></a>
+        <div class="intermediary-button">
+            <a href="index-6.html"><button class="back-button"><span>BACK</span></button></a>
+            <a href="index-8.html"><button class="next-button"><span>NEXT</span></button></a>
+        </div>
     </div>
 </body>
 </html>
