--- a/index-8.html
+++ b/index-8.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <img class="main-pic pic-bottom" src="images/Frame 1.png" alt="">
+        <img class="bigest-bottom-pic" src="images/Frame 1.png" alt="">
+        <div class="intermediary-button">
+            <a href="index-7.html"><button class="back-button"><span>BACK</span></button></a>
+            <a href="index-9.html"><button class="next-button"><span>MENU</span></button></a>
+        </div>
     </div>
-    <div class="intermediary-buttons">
-        <a href="index-7.html"><button class="button-intermediary"><span class="button-text">BACK</span></button></a>
-        <a href="index-9.html"><button class="button-intermediary"><span class="button-text">MENU</span></button></a>
-</div>
 </body>
 </html>
