--- a/index-9.html
+++ b/index-9.html
@@ -11,28 +11,80 @@
     <div class="container">
         <span class="menu-title">MENU</span>
         <img src="images/main-video.png" alt="">
-        <!-- <img class="" src="images/main-video.png" alt=""> -->
-        <div class="main-title-second">
-            <span class="main-text ">We have 12 secrets in the museum, look for them. And here is the list:</span>
+        <div class="biggest-main-title">
+            <span>We have 12 secrets in the museum, look for them. And here is the list:</span>
         </div>
-        <div class="kostakis-start">
-            <a href="index-2.html"><button class="big-button"><span class="big-button-text">Kostaki's room</span></button></a>
+        <a href="index-2.html"><button class="kostakis-button"><span>Kostaki's room</span></button></a>
+        <div class="kostakis-cards">
+            <a href="index-10.html"><div class="cards-shell">
+                <img src="images/Frame 22.png" alt="" class="cards-image">
+                <p class="cards-title">Man and Cloud</p><br>
+                <p class="cards-subtitle">Solomon Nikritin</p>
+            </div>
+        </a>
+        <a href="index-10.html"><div class="cards-shell">
+            <img src="images/Frame 23.png" alt="" class="cards-image">
+            <p class="cards-title">Cyclic construction</p><br>
+            <p class="cards-subtitle">Ivan Kliun</p>
         </div>
-
-        <div class="menu-cards">
-            <a href="index-10.html"><div class="menu__card">
-                <span class="card-title">Man and cloud</span>
-                <span class="card-subtitle">Solomon Nikritin</span>
-                <img class="card-img" src="images/Frame 22.png" alt="">
-            </div></a>
-
-        <!-- <div class="menu-cards">
-            <a href=""><div class="menu__card">
-                <span class="card-title">Man and cloud</span>
-                <span class="card-subtitle">Solomon Nikritin</span>
-                <img class="card-img" src="images/Frame 22.png" alt="">
-            </div></a> -->
-
+        </a>
+        <a href="index-10.html"><div class="cards-shell">
+            <img src="images/Frame 24.png" alt="" class="cards-image">
+            <p class="cards-title">Travelling 
+                woman </p><br>
+            <p class="cards-subtitle">Liubov Popova</p>
+        </div>
+        </a>
+        <a href="index-10.html"><div class="cards-shell">
+            <img src="images/Frame 25.png" alt="" class="cards-image">
+            <p class="cards-title">Dinamic city</p><br>
+            <p class="cards-subtitle">Gustav Klucis</p>
+        </div>
+    </a>
+    <a href="index-10.html"><div class="cards-shell">
+        <img src="images/Frame 26.png" alt="" class="cards-image">
+        <p class="cards-title">Wing strut for the letatlin</p><br>
+        <p class="cards-subtitle">Vladimir Tatlin</p>
+    </div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/Frame 28.png" alt="" class="cards-image">
+    <p class="cards-title">Untitled</p><br>
+    <p class="cards-subtitle">Elena Guro</p>
+</div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/Frame 29.png" alt="" class="cards-image">
+    <p class="cards-title">Black rectangle</p><br>
+    <p class="cards-subtitle">Kazimir Malevich</p>
+</div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/Frame 30.png" alt="" class="cards-image">
+    <p class="cards-title">Painterly Musical Construction</p><br>
+    <p class="cards-subtitle">Mikhail Matiushin</p>
+</div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/Frame 31.png" alt="" class="cards-image">
+    <p class="cards-title">Standing figure
+        (Aviator)</p><br>
+    <p class="cards-subtitle">Aleksei Morgunov</p>
+</div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/Frame 32.png" alt="" class="cards-image">
+    <p class="cards-title">Spatial Force
+        Construction</p><br>
+    <p class="cards-subtitle">Liubov Popova</p>
+</div>
+</a>
+<a href="index-10.html"><div class="cards-shell">
+    <img src="images/image 7.png" alt="" class="cards-image">
+    <p class="cards-title">Luminescense</p><br>
+    <p class="cards-subtitle">Ivan Kudriashov</p>
+</div>
+</a>
 
         </div>
     </div>
